# xfep-models

./: .gitignore  README.md  pyproject.toml
src/xfep/models/: __init__.py  base.py  boleta.py  client.py  company.py  credit_note.py  debit_note.py  detail.py  dispatch.py  enums.py  invoice.py  payment.py  quotation.py  responses.py  sale_note.py  summary.py  voided.py  webhook.py
tests/: test_base.py  test_boleta.py  test_client.py  test_company.py  test_credit_note.py  test_debit_note.py  test_detail.py  test_dispatch.py  test_enums.py  test_invoice.py  test_payment.py  test_quotation.py  test_responses.py  test_sale_note.py  test_summary.py  test_voided.py  test_webhook.py
